Support `@JsonPropertyOrder(alphabetic=true)`